--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>NIT Bus Schedule</title>
+    <title>NIT Bus Schedule</title>
     <!-- Material Design Lite JS -->
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <!-- Material Design Lite -->
@@ -26,7 +26,8 @@
                     <div class="mdl-card mdl-cell mdl-cell--12-col">
                         <div class="mdl-card__supporting-text">
                             <h4>新白岡駅→大学</h4>
-                            <p>次のバス: {{ next_bus_JR_S }}<span id="next_bus_JR_S_countdown"></span></p>
+                            <p>次のバス: {{ next_bus_JR_S }}</p>
+                            <p><span id="next_bus_JR_S_countdown"></span></p>
                             <p class="next_next">次々のバス: {{ next_next_bus_JR_S }}</p>
                         </div>
                     </div>
@@ -36,7 +37,8 @@
                     <div class="mdl-card mdl-cell mdl-cell--12-col">
                         <div class="mdl-card__supporting-text">
                             <h4>大学→新白岡駅</h4>
-                            <p>次のバス: {{ next_bus_JR_C }} <span id="next_bus_JR_C_countdown"></span></p>
+                            <p>次のバス: {{ next_bus_JR_C }}</p>
+                            <p><span id="next_bus_JR_C_countdown"></span></p>
                             <p class="next_next">次々のバス: {{ next_next_bus_JR_C }}</p>
                         </div>
                     </div>
@@ -46,7 +48,8 @@
                     <div class="mdl-card mdl-cell mdl-cell--12-col">
                         <div class="mdl-card__supporting-text">
                             <h4>東武動物公園駅→大学</h4>
-                            <p>次のバス: {{ next_bus_TOBU_S }} <span id="next_bus_TOBU_S_countdown"></span></p>
+                            <p>次のバス: {{ next_bus_TOBU_S }}</p>
+                            <p><span id="next_bus_TOBU_S_countdown"></span></p>
                             <p class="next_next">次々のバス: {{ next_next_bus_TOBU_S }}</p>
                         </div>
                     </div>
@@ -56,7 +59,8 @@
                     <div class="mdl-card mdl-cell mdl-cell--12-col">
                         <div class="mdl-card__supporting-text">
                             <h4>大学→東武動物公園駅</h4>
-                            <p>次のバス: {{ next_bus_TOBU_C }} <span id="next_bus_TOBU_C_countdown"></span></p>
+                            <p>次のバス: {{ next_bus_TOBU_C }}</p>
+                            <p><span id="next_bus_TOBU_C_countdown"></span></p>
                             <p class="next_next">次々のバス: {{ next_next_bus_TOBU_C }}</p>
                         </div>
                     </div>
@@ -68,6 +72,7 @@
     
 </body>
 <script>
+    // カウントダウンタイマーの設定
     countdownTimer("{{ next_bus_JR_S }}", "next_bus_JR_S_countdown");
     countdownTimer("{{ next_bus_JR_C }}", "next_bus_JR_C_countdown");
     countdownTimer("{{ next_bus_TOBU_S }}", "next_bus_TOBU_S_countdown");
